# Software-Engineering-Sprint4

./: CMakeLists.txt  README.md  pencil_producer.pro  pencil_producer.pro.user.f7855f5  references.txt
doc/: config
doc/html/: annotated.html  classes.html  classproduce__pencil-members.html  classproduce__pencil.html  classproduce__pencil__coll__graph.dot  classproduce__pencil__coll__graph.md5  classproduce__pencil__inherit__graph.dot  classproduce__pencil__inherit__graph.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.dot  inherit_graph_0.md5  inherits.html  produce__pencil_8h_source.html
doc/latex/: annotated.tex  classproduce__pencil.tex  classproduce__pencil.tex.tmp  classproduce__pencil__coll__graph.dot  classproduce__pencil__coll__graph.md5  classproduce__pencil__inherit__graph.dot  classproduce__pencil__inherit__graph.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  hierarchy.tex  refman.tex
docs/: Doxyfile  Doxyfile.in
docs/html/: annotated.html  classDebug-members.html  classDebug.html  classDebug__coll__graph.dot  classDebug__coll__graph.map  classDebug__coll__graph.md5  classDebug__inherit__graph.dot  classDebug__inherit__graph.map  classDebug__inherit__graph.md5  classIntelligence-members.html  classIntelligence.html  classIntelligence__inherit__graph.dot  classIntelligence__inherit__graph.map  classIntelligence__inherit__graph.md5  classMainWindow-members.html  classMainWindow.html  classMainWindow__coll__graph.dot  classMainWindow__coll__graph.map  classMainWindow__coll__graph.md5  classMainWindow__inherit__graph.dot  (+83 more)
src/: CMakeLists.txt  debug.cpp  debug.h  intelligence.cpp  intelligence.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pencil.cpp  pencil.h  produce_pencil.cpp  produce_pencil.h  produce_pencil.ui  production.cpp  production.h  server.cpp  server.h  tests.cpp  wallet.cpp  wallet.h
test/: testcases.txt
(+104 files in other folders)
